@@ -3,6 +3,8 @@
 
 - Implemented feature #12567: All help generation methods now support grouping
   of options.
+- Fixed issue #13240: ezcConsoleProgressbar now allows to specify
+  $minVerbosity and $maxVerbosity options.
 
 
 1.4 - Monday 16 June 2008
